--- a/sample/index.html
+++ b/sample/index.html
@@ -20,7 +20,10 @@
     <main id="app">
       <h1>MicroSPA</h1>
       <p>Hello world! From MicroSPA</p>
+      <ms-counter start=15></ms-counter>
       <ms-counter></ms-counter>
+      <ms-todo value=read></ms-todo>
+      <ms-todo></ms-todo>
     </main>
     <template id="view">
       <h1>Some template defined view</h1>
