--- a/sample/index.html
+++ b/sample/index.html
@@ -16,6 +16,7 @@
       <a href="#/counter/7">Counter 7</a>
       <a href="#/counter?start=3">Counter 3</a>
       <a href="#/this/is/404">Not Founded</a>
+      <button onclick="stop">Stop Router</button>
     </nav>
     <main id="app">
       <h1>MicroSPA</h1>
