--- a/tests/index.html
+++ b/tests/index.html
@@ -43,5 +43,9 @@
       <ms-camelCase></ms-camelCase>
       <ms-camel-case></ms-camel-case>
     </template>
+    <template id="ms-pending">
+      <h1>Lazy</h1>
+      <ms-lazy></ms-lazy>
+    </template>
   </body>
 </html>
