All tests passing

--- a/tests/index.html
+++ b/tests/index.html
@@ -47,5 +47,16 @@
       <h1>Lazy</h1>
       <ms-lazy></ms-lazy>
     </template>
+    <template id="ms-many">
+      <h1>Many</h1>
+      <ms-ticker></ms-ticker>
+      <ms-ticker start="7"></ms-ticker>
+    </template>
+    <template id="ms-too-many">
+      <h1>Too many</h1>
+      <ms-ticker></ms-ticker>
+      <ms-ticker start="5"></ms-ticker>
+      <ms-many></ms-many>
+    </template>
   </body>
 </html>
