--- a/index.html
+++ b/index.html
@@ -9,66 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <script type="module">
       import microspa from './index.js'
-
-      const ticker = (root, {start, delay}) => {
-        start = (isNaN(start) ? 0 : parseInt(start)) - 1
-        const update = () => {
-          root.innerHTML = `<h1>Tick: ${++start}</h1>`
-          console.log('tick: '+start)
-        }
-        update()
-        const interval = setInterval(update, (delay || 1) * 1000)
-        return () => {clearInterval(interval)}
-      }
-
-      const counter = (node, {start}) => import("https://unpkg.com/superfine")
-        .then(({h, text, patch}) => {
-          var stop = false
-          const setState = (state) => stop ? null :
-            patch(
-              node,
-              h(node.tagName.toLowerCase(), {}, [
-                h("h1", {}, text(state)),
-                h("button", { onclick: () => setState(state - 1) }, text("-")),
-                h("button", { onclick: () => setState(state + 1) }, text("+")),
-              ])
-            )
-
-          setState(isNaN(start) ? 0 : parseInt(start))
-
-          return () => {stop = true}
-        })
-
-      const todo = (node, {value}) => import("https://unpkg.com/hyperapp")
-        .then(({h, text, app}) => {
-          var stop = false
-          const AddTodo = (state) => stop ? state : ({
-            ...state,
-            value: "",
-            todos: state.todos.concat(state.value),
-          })
-
-          const NewValue = (state, event) => stop ? state : ({
-            ...state,
-            value: event.target.value,
-          })
-
-          app({
-            init: { todos: [], value: value || "" },
-            view: ({ todos, value }) =>
-              h(node.tagName.toLowerCase(), {}, [
-                h("h1", {}, text("To do list")),
-                h("input", { type: "text", oninput: NewValue, value }),
-                h("ul", {},
-                  todos.map((todo) => h("li", {}, text(todo)))
-                ),
-                h("button", { onclick: AddTodo }, text("New!")),
-              ]),
-            node: node
-          })
-
-          return () => {stop = true}
-        })
+      import ticker from './components/ticker.js'
+      import counter from './components/counter.js'
+      import todo from './components/todo.js'
 
       window.stop = microspa(document.getElementById('app'), {
         components: {
