--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>MicroSPA</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
     <script type="module">
       import microspa from './index.js'
       import ticker from './components/ticker.js'
@@ -139,5 +140,12 @@
     <template data-loading>
       <h1>Loading...</h1>
     </template>
+    <a
+      id="gh"
+      class="github-fork-ribbon"
+      href="https://github.com/marcodpt/microspa"
+      data-ribbon="Fork me on GitHub"
+      title="Fork me on GitHub"
+    >Fork me on GitHub</a>
   </body>
 </html>
